updated styles layout, header

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <header id="header" class="target">
+    <div class="container flex flex-column justify-content-center">
+        <header id="header" class="target flex flex flex-column justify-content-center">
             <div class="header__wrapper">
                 <div class="header__left">
                     <img src="assets/images/01_header/logo_dark.png" alt="logo">
@@ -208,11 +208,11 @@
                             </div>
                         </div>
                         <div class="slider__left-bottom">
-                            <button class="btn btn-explore">
+                            <button class="btn btn__primary btn-explore">
                                 <i class="fa-solid fa-rocket"></i>
                                 <p>Explore</p>
                             </button>
-                            <button class="btn btn-create">
+                            <button class="btn btn__primary btn-create">
                                 <i class="fa-solid fa-file-lines"></i>
                                 <p>Create</p>
                             </button>
