--- a/index.html
+++ b/index.html
@@ -16,172 +16,171 @@
     <link rel="stylesheet" href="assets/css/auctions.css">
     <link rel="stylesheet" href="assets/css/seller.css">
     <link rel="stylesheet" href="assets/css/picks.css">
-    <link rel="stylesheet" href="assets/css/popular.css">
     <link rel="stylesheet" href="assets/css/guideline.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/socials.css">
 </head>
 
 <body>
-    <div class="container flex flex-column justify-content-center">
-        <header id="header" class="target flex flex flex-column justify-content-center">
-            <div class="header__wrapper">
-                <div class="header__left">
-                    <img src="assets/images/01_header/logo_dark.png" alt="logo">
-                </div>
-                <div class="header__center">
-                    <nav class="navbar">
-                        <div class="navbar__link">
-                            <span>Home</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    home 1
-                                </li>
-                                <li>
-                                    home 2
-                                </li>
-                                <li>
-                                    home 3
-                                </li>
-                                <li>
-                                    home 4
-                                </li>
-                                <li class="has-child">
-                                    home 6
-                                    <ul class="sub__menu-two">
-                                        <li>
-                                            sub home 1
-                                        </li>
-                                        <li>
-                                            sub home 2
-                                        </li>
-                                        <li>
-                                            sub home 3
-                                        </li>
-                                        <li>
-                                            sub home 4
-                                        </li>
-                                        <li>
-                                            sub home 6
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navbar__link">
-                            <span>explore</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    explore 1
-                                </li>
-                                <li>
-                                    explore 2
-                                </li>
-                                <li>
-                                    explore 3
-                                </li>
-                                <li>
-                                    explore 4
-                                </li>
-                                <li>
-                                    explore 6
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navbar__link">
-                            <span>activity</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    activity 1
-                                </li>
-                                <li>
-                                    activity 2
-                                </li>
-                                <li>
-                                    activity 3
-                                </li>
-                                <li>
-                                    activity 4
-                                </li>
-                                <li>
-                                    activity 6
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navbar__link">
-                            <span>Community</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    Community 1
-                                </li>
-                                <li>
-                                    Community 2
-                                </li>
-                                <li>
-                                    Community 3
-                                </li>
-                                <li>
-                                    Community 4
-                                </li>
-                                <li>
-                                    Community 6
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navbar__link">
-                            <span>Pages</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    <a href="login.html"> login </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navbar__link">
-                            <span>Contact</span>
-                            <i class="fa-solid fa-angle-down"></i>
-                            <ul class="sub__menu-one">
-                                <li>
-                                    Contact 1
-                                </li>
-                                <li>
-                                    Contact 2
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-                <div class="header__right">
-                    <div class="search__icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <form class="header__search-box">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            <input class="search__box-input" placeholder="search..." type="text">
-                        </form>
-                    </div>
-                    <a class="header__wallet">
-                        <i class="fa-solid fa-briefcase"></i>
-                        wallet connect
-                    </a>
-                    <div class="header__mode">
-                        <h5>dark mode <br>
-                            <b>available</b>
-                        </h5>
-                        <div class="header__sun">
-                            <img src="assets/images/01_header/sun.png" alt="sun mode">
-                        </div>
-                        <div class="header__moon">
-                            <img src="assets/images/01_header/moon-2.png" alt="moon mode">
-                        </div>
-                    </div>
-                </div>
-                <div class="menu target"></div>
+    <header id="header" class="target flex flex-column justify-content-center">
+        <div class="header__wrapper">
+            <div class="header__left">
+                <img src="assets/images/01_header/logo_dark.png" alt="logo">
             </div>
-        </header>
+            <div class="header__center">
+                <nav class="navbar">
+                    <div class="navbar__link">
+                        <span>Home</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                home 1
+                            </li>
+                            <li>
+                                home 2
+                            </li>
+                            <li>
+                                home 3
+                            </li>
+                            <li>
+                                home 4
+                            </li>
+                            <li class="has-child">
+                                home 6
+                                <ul class="sub__menu-two">
+                                    <li>
+                                        sub home 1
+                                    </li>
+                                    <li>
+                                        sub home 2
+                                    </li>
+                                    <li>
+                                        sub home 3
+                                    </li>
+                                    <li>
+                                        sub home 4
+                                    </li>
+                                    <li>
+                                        sub home 6
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar__link">
+                        <span>explore</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                explore 1
+                            </li>
+                            <li>
+                                explore 2
+                            </li>
+                            <li>
+                                explore 3
+                            </li>
+                            <li>
+                                explore 4
+                            </li>
+                            <li>
+                                explore 6
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar__link">
+                        <span>activity</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                activity 1
+                            </li>
+                            <li>
+                                activity 2
+                            </li>
+                            <li>
+                                activity 3
+                            </li>
+                            <li>
+                                activity 4
+                            </li>
+                            <li>
+                                activity 6
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar__link">
+                        <span>Community</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                Community 1
+                            </li>
+                            <li>
+                                Community 2
+                            </li>
+                            <li>
+                                Community 3
+                            </li>
+                            <li>
+                                Community 4
+                            </li>
+                            <li>
+                                Community 6
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar__link">
+                        <span>Pages</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                <a href="login.html"> login </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar__link">
+                        <span>Contact</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                        <ul class="sub__menu-one">
+                            <li>
+                                Contact 1
+                            </li>
+                            <li>
+                                Contact 2
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div class="header__right">
+                <div class="search__icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <form class="header__search-box">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input class="search__box-input" placeholder="search..." type="text">
+                    </form>
+                </div>
+                <a class="header__wallet">
+                    <i class="fa-solid fa-briefcase"></i>
+                    wallet connect
+                </a>
+                <div class="header__mode">
+                    <h5>dark mode <br>
+                        <b>available</b>
+                    </h5>
+                    <div class="header__sun">
+                        <img src="assets/images/01_header/sun.png" alt="sun mode">
+                    </div>
+                    <div class="header__moon">
+                        <img src="assets/images/01_header/moon-2.png" alt="moon mode">
+                    </div>
+                </div>
+            </div>
+            <div class="menu target"></div>
+        </div>
+    </header>
+    <div class="container flex flex-column justify-content-center">
         <main>
             <section id="hero" class="slider">
                 <div class="bg-circle">
@@ -1011,43 +1010,6 @@
                 </div>
             </section>
         </main>
-        <footer id="footer">
-            <div class="footer__wrapper">
-                <div class="footer__logo">
-                    <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat modi consequatur quasi quos
-                        pariatur! Voluptatum non at accusantium quasi aliquam!</p>
-                </div>
-                <div class="footer__account">
-                    <h5 class="footer__title">my account</h5>
-                    <a href="#" class="footer__lik">authors</a>
-                    <a href="#" class="footer__lik">collation</a>
-                    <a href="#" class="footer__lik">author profile</a>
-                    <a href="#" class="footer__lik">create item</a>
-                </div>
-                <div class="footer__resource">
-                    <h5 class="footer__title">resource</h5>
-                    <a href="#" class="footer__lik">help &AMP; support</a>
-                    <a href="#" class="footer__lik">live auctions</a>
-                    <a href="#" class="footer__lik">item details</a>
-                    <a href="#" class="footer__lik">activity</a>
-                </div>
-                <div class="footer__company">
-                    <h5 class="footer__title">company</h5>
-                    <a href="#" class="footer__lik">explore</a>
-                    <a href="#" class="footer__lik">contact us</a>
-                    <a href="#" class="footer__lik">our blog</a>
-                    <a href="#" class="footer__lik">Faq</a>
-                </div>
-                <div class="footer__subscribe">
-                    <h5 class="footer__title">subscribe us</h5>
-                    <form class="footer__form" method="post">
-                        <input class="subscribe__input" type="email" placeholder="info@yourgmail">
-                        <button class="footer__submit" type="submit"></button>
-                    </form>
-                </div>
-            </div>
-        </footer>
         <div class="vertical__social">
             <div class="button heartbeatSlow"><i class="fa-solid fa-share-nodes"></i></div>
             <div class="socials">
@@ -1069,6 +1031,43 @@
             </defs>
         </svg>
     </div>
+    <footer id="footer">
+        <div class="footer__wrapper">
+            <div class="footer__logo">
+                <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat modi consequatur quasi quos
+                    pariatur! Voluptatum non at accusantium quasi aliquam!</p>
+            </div>
+            <div class="footer__account">
+                <h5 class="footer__title">my account</h5>
+                <a href="#" class="footer__lik">authors</a>
+                <a href="#" class="footer__lik">collation</a>
+                <a href="#" class="footer__lik">author profile</a>
+                <a href="#" class="footer__lik">create item</a>
+            </div>
+            <div class="footer__resource">
+                <h5 class="footer__title">resource</h5>
+                <a href="#" class="footer__lik">help &AMP; support</a>
+                <a href="#" class="footer__lik">live auctions</a>
+                <a href="#" class="footer__lik">item details</a>
+                <a href="#" class="footer__lik">activity</a>
+            </div>
+            <div class="footer__company">
+                <h5 class="footer__title">company</h5>
+                <a href="#" class="footer__lik">explore</a>
+                <a href="#" class="footer__lik">contact us</a>
+                <a href="#" class="footer__lik">our blog</a>
+                <a href="#" class="footer__lik">Faq</a>
+            </div>
+            <div class="footer__subscribe">
+                <h5 class="footer__title">subscribe us</h5>
+                <form class="footer__form" method="post">
+                    <input class="subscribe__input" type="email" placeholder="info@yourgmail">
+                    <button class="footer__submit" type="submit"></button>
+                </form>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 
