added template details page

--- a/details.html
+++ b/details.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="assets/css/auctions.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/socials.css">
+    <link rel="stylesheet" href="assets/css/deatils/layout.css">
     <link rel="stylesheet" href="assets/css/deatils/auctions.css">
+    <link rel="stylesheet" href="assets/css/deatils/product.css">
 </head>
 
 <body>
@@ -186,6 +188,67 @@
                     <li class="directory__path-item">explore</li>
                     <li class="directory__path-item">item details</li>
                 </ul>
+            </section>
+            <section id="product">
+                <div class="product__left">
+                    <img src="assets/images/details/images-item-details.jpg" alt="">
+                </div>
+                <div class="product__right">
+                    <h2 class="product__title"> the fantasy flower illustration</h2>
+                    <div class="product__action">
+                        <div class="product__action-left">
+                            <div class="view">
+                                <p>225</p>
+                            </div>
+                            <div class="like">100</div>
+                        </div>
+                        <div class="product__action-right">
+                            <div class="share">
+                                <i>shape</i>
+                            </div>
+                            <div class="more"> <i>...</i></div>
+                        </div>
+                    </div>
+                    <div class="product__person">
+                        <div class="product__person-item">
+                            <div class="person__left">
+                                <img src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
+                            </div>
+                            <div class="person__right">
+                                <h4>owned by</h4>
+                                <h3>ralph garraway</h3>
+                            </div>
+                        </div>
+                        <div class="product__person-item">
+                            <div class="person__left">
+                                <img src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
+                            </div>
+                            <div class="person__right">
+                                <h4>created by</h4>
+                                <h3>ralph garraway</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product__description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores reiciendis minima fugiat
+                            eum cumque, sapiente nam quos qui ab atque dolor fuga est dicta quidem consectetur totam
+                            facilis esse quae? Vitae reiciendis aperiam excepturi obcaecati maiores, tempore inventore,
+                            placeat cumque ratione id praesentium? Atque praesentium, quo explicabo fuga exercitationem
+                            autem!</p>
+                    </div>
+                    <div class="product__info">
+                        <div class="product-price">
+                            <span>current bid</span>
+                            <p>4.89 eth = $12.246</p>
+                        </div>
+                        <div class="product-time">
+                            <span>count down</span>
+                            <p>4 : 17 : 17 : 33</p>
+                        </div>
+                        <button class="product__button">place a bid</button>
+                        <div class="product__extra">test</div>
+                    </div>
+                </div>
             </section>
             <section id="live-auctions">
                 <div class="auctions__top">
