update section details in details page

--- a/details.html
+++ b/details.html
@@ -197,34 +197,29 @@
                     <h2 class="product__title"> the fantasy flower illustration</h2>
                     <div class="product__action">
                         <div class="product__action-left">
-                            <div class="view">
-                                <p>225</p>
-                            </div>
-                            <div class="like">100</div>
+                            <span class="view action-product">
+                                225
+                            </span>
+                            <span class="like action-product">100</span>
                         </div>
                         <div class="product__action-right">
-                            <div class="share">
-                                <i>shape</i>
-                            </div>
-                            <div class="more"> <i>...</i></div>
+                            <i class="share action-product">
+                            </i>
+                            <i class="more action-product"></i>
                         </div>
                     </div>
                     <div class="product__person">
                         <div class="product__person-item">
-                            <div class="person__left">
-                                <img src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
-                            </div>
+                            <img class="person__left" src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
                             <div class="person__right">
-                                <h4>owned by</h4>
+                                <span>owned by</span>
                                 <h3>ralph garraway</h3>
                             </div>
                         </div>
                         <div class="product__person-item">
-                            <div class="person__left">
-                                <img src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
-                            </div>
+                            <img class="person__left" src="assets/images/04_Top Seller/avt-1.jpg" alt="person">
                             <div class="person__right">
-                                <h4>created by</h4>
+                                <span>created by</span>
                                 <h3>ralph garraway</h3>
                             </div>
                         </div>
@@ -245,8 +240,34 @@
                             <span>count down</span>
                             <p>4 : 17 : 17 : 33</p>
                         </div>
-                        <button class="product__button">place a bid</button>
-                        <div class="product__extra">test</div>
+                    </div>
+                    <button class="product__button btn">place a bid</button>
+                    <div class="product__extra">
+                        <ul class="tab__list">
+                            <li class="tablist__history">
+                                bid history
+                                <ul class="sublist">
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h3>mason woodward</h3>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <p>4.89 ETH</p>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="tablist__info">info</li>
+                            <li class="tablist__provenance">Provenance</li>
+                        </ul>
                     </div>
                 </div>
             </section>
