complate details page

--- a/details.html
+++ b/details.html
@@ -184,9 +184,9 @@
             <section id="directory">
                 <h1 class="directory__title">item details</h1>
                 <ul class="directory__path">
-                    <li class="directory__path-item">Home</li>
-                    <li class="directory__path-item">explore</li>
-                    <li class="directory__path-item">item details</li>
+                    <li class="directory__path-item"><a href="index.html">Home</a></li>
+                    <li class="directory__path-item"><a href="#">explore</a></li>
+                    <li class="directory__path-item"><a href="#">item details</a></li>
                 </ul>
             </section>
             <section id="product">
@@ -243,30 +243,158 @@
                     </div>
                     <button class="product__button btn">place a bid</button>
                     <div class="product__extra">
-                        <ul class="tab__list">
-                            <li class="tablist__history">
-                                bid history
+                      <div class="extra__title">
+                        <h4 id="tab1" class="active">bid history</h4>
+                        <h4 id="tab2">info</h4>
+                        <h4 id="tab3">Provenance</h4>
+                      </div>
+                        <ul class="extra__tabs">
+                            <li class="tablist__history extra__subtab show-tab" id="tab1">
                                 <ul class="sublist">
                                     <li>
                                         <div class="sublist-account">
                                             <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
                                             <div class="account__info">
                                                 <div class="account__info--name">
-                                                    <h3>mason woodward</h3>
+                                                    <h6><a href="#">mason woodward</a></h6>
                                                     <span>place a bid</span>
                                                 </div>
                                                 <span>8 hours ago</span>
                                             </div>
                                         </div>
                                         <div class="sublist-price">
-                                            <p>4.89 ETH</p>
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
                                             <span>=$12.246</span>
                                         </div>
                                     </li>
                                 </ul>
                             </li>
-                            <li class="tablist__info">info</li>
-                            <li class="tablist__provenance">Provenance</li>
+                            <li class="extra__subtab tablist__info" id="tab2">
+                                <ul class="sublist">
+                                    <li>
+                                        <div class="sublist-account">
+                                            <img src="assets/images/04_Top Seller/avt-2.jpg" alt="person">
+                                            <div class="account__info">
+                                                <div class="account__info--name">
+                                                    <h6><a href="#">mason woodward</a></h6>
+                                                    <span>place a bid</span>
+                                                </div>
+                                                <span>8 hours ago</span>
+                                            </div>
+                                        </div>
+                                        <div class="sublist-price">
+                                            <h5>4.89 ETH</h5>
+                                            <span>=$12.246</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="extra__subtab tablist__provenance" id="tab3">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                    It has survived not only five centuries, but also the leap into electronic
+                                    typesetting, remaining essentially unchanged. It was popularised in the 1960s with
+                                    the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                                    with desktop publishing software like Aldus PageMaker including versions of Lorem
+                                    Ipsum</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
