--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                             <li>
                                 <a href="login.html"> login </a>
                             </li>
+                            <li>
+                                <a href="details.html"> details </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="navbar__link">
