--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <div class="login__wrapper">
             <div class="login__left">
                 <img src="assets/images/login.svg" alt="picture login page">
