added efect image details

--- a/details.html
+++ b/details.html
@@ -191,7 +191,21 @@
             </section>
             <section id="product">
                 <div class="product__left">
-                    <img src="assets/images/details/images-item-details.jpg" alt="">
+                  
+<div class="example">
+    <div class="block">
+      <div class="side -main"></div>
+      <div class="side -left"></div>
+    </div>
+    <div class="block">
+      <div class="side -main"></div>
+      <div class="side -left"></div>
+    </div>
+    <div class="block">
+      <div class="side -main"></div>
+      <div class="side -left"></div>
+    </div>
+  </div>
                 </div>
                 <div class="product__right">
                     <h2 class="product__title"> the fantasy flower illustration</h2>
