updated styles buttton back to home in login page

--- a/login.html
+++ b/login.html
@@ -34,8 +34,11 @@
                     </svg>
                 
                     <button id="gooey-button">
-                        back home
+                        back to home page
                         <span class="bubbles">
+                            <span class="bubble"></span>
+                            <span class="bubble"></span>
+                            <span class="bubble"></span>
                             <span class="bubble"></span>
                             <span class="bubble"></span>
                             <span class="bubble"></span>
