add btn scroll to top

--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,7 @@
             </div>
         </div>
     </footer>
+    <button class="scroll__btn"><i class="fa-duotone fa-chevrons-up"></i></button>
     <script src="assets/js/script.js"></script>
 </body>
 
