--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="bar">
+            <div class="circle"></div>
+            <p>Loading</p>
+        </div>
+    </div>
     <header id="header" class="target flex flex-column justify-content-center">
         <div class="header__wrapper">
             <div class="header__left">
@@ -211,7 +217,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="slider__right"> 
+                    <div class="slider__right">
                         <div class="bg-circle">
                             <div class="shape circle__shape-16"></div>
                             <div class="shape circle__shape-22"></div>
@@ -220,7 +226,7 @@
                             <div class="shape circle__shape-51"></div>
                             <div class="shape circle__shape-52"></div>
                             <div class="shape circle__shape-68"></div>
-                        </div>                   
+                        </div>
                         <div class="wrapper__images">
                             <img src="assets/images/02_hero/imgslider2.png" alt=" hero">
                         </div>
@@ -926,7 +932,7 @@
                             </div>
                         </div>
                     </div>
-   
+
                 </div>
                 <a class="picks__more">
                     load more
@@ -1076,7 +1082,7 @@
         </div>
     </footer>
     <button class="scroll__btn"><i class="fa-duotone fa-chevrons-up"></i></button>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" defer></script>
 </body>
 
 </html>
