add inline style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Loading</p>
         </div>
     </div>
-    <header id="header" class="target flex flex-column justify-content-center">
+    <header style="display: none;" id="header" class="target flex flex-column justify-content-center">
         <div class="header__wrapper">
             <div class="header__left">
                 <img src="assets/images/01_header/logo_dark.png" alt="logo">
@@ -189,7 +189,7 @@
             <div class="menu target"></div>
         </div>
     </header>
-    <div class="container flex flex-column justify-content-center">
+    <div style="display: none;" class="container flex flex-column justify-content-center">
         <main>
             <section id="hero" class="slider">
                 <div class="hero__wrapper">
@@ -1044,7 +1044,7 @@
             </defs>
         </svg>
     </div>
-    <footer id="footer">
+    <footer style="display: none;" id="footer">
         <div class="footer__wrapper">
             <div class="footer__logo">
                 <img src="assets/images/01_header/logo_dark.png" alt="logo footer">
