add music for befor load page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+    <script defer>
+        let audio = new Audio();
+        audio.src = "https://hosseinghanbari.ir/other/music-player/autumn.mp3";
+        audio.play();
+    </script>
     <div class="preloader">
         <div class="bar">
             <div class="circle"></div>
