--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <script defer>
+    <script>
         let audio = new Audio();
         audio.src = "https://hosseinghanbari.ir/other/music-player/autumn.mp3";
         audio.play();
