--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 </head>
 
 <body>
-    <script>
-        let audio = new Audio();
-        audio.src = "https://hosseinghanbari.ir/other/music-player/autumn.mp3";
-        audio.play();
-    </script>
+    <audio class="audio" autoplay loop preload="auto" src="https://hosseinghanbari.ir/other/music-player/autumn.mp3"></audio>
     <div class="preloader">
         <div class="bar">
             <div class="circle"></div>
